Removing 3rd party dependencies from repository

--- a/index.html
+++ b/index.html
@@ -4,18 +4,14 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Raft Scope</title>
-        <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
-        <link href="bootstrap-slider/dist/css/bootstrap-slider.min.css" rel="stylesheet">
-        <script src="jquery/jquery.min.js"></script>
-        <script src="bootstrap/js/bootstrap.min.js"></script>
-        <script src="bootstrap-slider/dist/bootstrap-slider.min.js"></script>
-        <script src="bootstrap-contextmenu/bootstrap-contextmenu.js"></script>
-        <script src="util.js"></script>
-        <script src="state.js"></script>
-        <script src="raft.js"></script>
-        <script src="render.js"></script>
-        <script src="presenter.js"></script>
-        <script src="script.js"></script>
+
+        <!-- bootstrap 3.3.7 -->
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+        <!-- bootstrap-slider -->
+        <link href="//cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/9.9.0/css/bootstrap-slider.min.css" rel="stylesheet">
+
+        <!-- project css -->
         <link href="style.css" rel="stylesheet">
     </head>
     <body>
@@ -247,5 +243,23 @@
             <ul class="dropdown-menu" role="menu">
             </ul>
         </div>
+
+
+        <!--<script src="jquery/jquery.min.js"></script>-->
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+        <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
+        <!-- bootstrap-slider -->
+        <script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/9.9.0/bootstrap-slider.min.js"></script>
+        <!-- bootstrap-contextmenu -->
+        <script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-contextmenu/0.3.4/bootstrap-contextmenu.min.js"></script>
+
+        <!-- project stuff -->
+        <script src="util.js"></script>
+        <script src="state.js"></script>
+        <script src="raft.js"></script>
+        <script src="render.js"></script>
+        <script src="presenter.js"></script>
+        <script src="script.js"></script>
     </body>
 </html>
