Single decree paxos working and tests. Added Yarn and babel support

--- a/index.html
+++ b/index.html
@@ -254,6 +254,9 @@
         <!-- bootstrap-contextmenu -->
         <script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-contextmenu/0.3.4/bootstrap-contextmenu.min.js"></script>
 
+        <!-- babel -->
+        <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+
         <!-- project stuff -->
         <script src="util.js"></script>
         <script src="state.js"></script>
