--- a/src/main/legacy/index.html
+++ b/src/main/legacy/index.html
@@ -54,6 +54,7 @@
             <div class="row" style="margin-top: 20px">
                 <div class="col-sm-6">
                     <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="450" height="430">
+                        <!-- defining elements for later use -->
                         <defs>
                             <marker id="TriangleOutM" orient="auto" refX="0.0" refY="0.0" style="overflow:visible">
                                 <path d="M 5.77,0.0 L -2.88,5.0 L -2.88,-5.0 L 5.77,0.0 z"
