--- a/src/main/html/index.html
+++ b/src/main/html/index.html
@@ -53,7 +53,8 @@
             </nav>
             <div class="row" style="margin-top: 20px">
                 <div class="col-sm-6">
-                    <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="450" height="430">
+                    <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="450" height="430"
+                         style="padding-left: 5px">
                         <defs>
                             <marker id="TriangleOutM" orient="auto" refX="0.0" refY="0.0" style="overflow:visible">
                                 <path d="M 5.77,0.0 L -2.88,5.0 L -2.88,-5.0 L 5.77,0.0 z"
