--- a/src/main/html/index.html
+++ b/src/main/html/index.html
@@ -60,15 +60,26 @@
                                 <path d="M 5.77,0.0 L -2.88,5.0 L -2.88,-5.0 L 5.77,0.0 z"
                                     transform="scale(0.4)"></path>
                             </marker>
-                            <marker id="TriangleOutS-RequestVote" orient="auto" refX="0.0" refY="0.0"
+                            <!--The only difference on this paths is the classes added-->
+                            <marker id="TriangleOutS-Prepare" orient="auto" refX="0.0" refY="0.0"
                                 style="overflow:visible">
                                 <path d="M 5.77,0.0 L -2.88,5.0 L -2.88,-5.0 L 5.77,0.0 z" transform="scale(0.3)"
-                                    class="message RequestVote"></path>
+                                      class="message Prepare"></path>
                             </marker>
-                            <marker id="TriangleOutS-AppendEntries" orient="auto" refX="0.0" refY="0.0"
-                                style="overflow:visible">
+                            <marker id="TriangleOutS-Promise" orient="auto" refX="0.0" refY="0.0"
+                                    style="overflow:visible">
                                 <path d="M 5.77,0.0 L -2.88,5.0 L -2.88,-5.0 L 5.77,0.0 z" transform="scale(0.3)"
-                                    class="message AppendEntries"></path>
+                                      class="message Promise"></path>
+                            </marker>
+                            <marker id="TriangleOutS-Accept" orient="auto" refX="0.0" refY="0.0"
+                                    style="overflow:visible">
+                                <path d="M 5.77,0.0 L -2.88,5.0 L -2.88,-5.0 L 5.77,0.0 z" transform="scale(0.3)"
+                                      class="message Accept"></path>
+                            </marker>
+                            <marker id="TriangleOutS-Accepted" orient="auto" refX="0.0" refY="0.0"
+                                    style="overflow:visible">
+                                <path d="M 5.77,0.0 L -2.88,5.0 L -2.88,-5.0 L 5.77,0.0 z" transform="scale(0.3)"
+                                      class="message Accepted"></path>
                             </marker>
                         </defs>
                         <circle id="ring"></circle>
