Adding cypress and some functional tests

--- a/src/main/html/index.html
+++ b/src/main/html/index.html
@@ -268,7 +268,8 @@
         <script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-contextmenu/0.3.4/bootstrap-contextmenu.min.js"></script>
 
         <!-- babel -->
-        <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+        <!--TODO enable babel!-->
+        <!--<script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>-->
 
         <!-- project stuff -->
         <script src="../js/ui/util.js"></script>
