Implemented Master strategy. Select strategy through URL. More tests

--- a/src/main/html/index.html
+++ b/src/main/html/index.html
@@ -81,6 +81,18 @@
                                 <path d="M 5.77,0.0 L -2.88,5.0 L -2.88,-5.0 L 5.77,0.0 z" transform="scale(0.3)"
                                       class="message Accepted"></path>
                             </marker>
+                            </marker>
+                            <marker id="TriangleOutS-SyncRequest" orient="auto" refX="0.0" refY="0.0"
+                                    style="overflow:visible">
+                                <path d="M 5.77,0.0 L -2.88,5.0 L -2.88,-5.0 L 5.77,0.0 z" transform="scale(0.3)"
+                                      class="message SyncRequest"></path>
+                            </marker>
+                            </marker>
+                            <marker id="TriangleOutS-CatchUp" orient="auto" refX="0.0" refY="0.0"
+                                    style="overflow:visible">
+                                <path d="M 5.77,0.0 L -2.88,5.0 L -2.88,-5.0 L 5.77,0.0 z" transform="scale(0.3)"
+                                      class="message CatchUp"></path>
+                            </marker>
                         </defs>
                         <circle id="ring"></circle>
                         <g id="pause" class="resumed">
@@ -259,7 +271,9 @@
 
 
         <!--<script src="jquery/jquery.min.js"></script>-->
-        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+        <script src="http://code.jquery.com/jquery-3.2.1.slim.min.js"
+                integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+                crossorigin="anonymous"></script>
         <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
         <!-- bootstrap-slider -->
