Implemented add node

--- a/src/main/html/index.html
+++ b/src/main/html/index.html
@@ -291,6 +291,7 @@
         <script src="../js/ui/paxos.js"></script>
         <script src="../js/ui/render.js"></script>
         <script src="../js/ui/presenter.js"></script>
+        <script type="module" src="../js/ui/es6util.js"></script>
         <script type="module" src="../js/paxos/Cluster.js"></script>
         <script type="module" src="../js/paxos/Node.js"></script>
         <script type="module" src="../js/ui/UiMessageHandler.js"></script>
